--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   </head>
   <body>
 
+    <div id="Form">
+          <form class="mk1">
+            Enter the triangle values below: <br>
+            <p>
+              <h4>Side 1: </h4><BR>
+                <input type="Integer" NAME="input1" id="Triangle_Input1">
+                <h4>Side 2: </h4><BR>
+                  <input type="Integer" NAME="input2"  id="Triangle_Input2">
+                  <h4>Side 3:</h4> <BR>
+                    <input type="Integer" NAME="input3" id="Triangle_Input3">
+                    <input type="button" name="submitbutton" value="submit" onclick="fidel()">
+                  </form>
+                </div>
 
     <script src="js/script.js"></script>
   </body>
