--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
 
+
+    <div class="tex">
+      <h1>Triangle Tracker</h1>
+      <p id="mk3">This is an application that determines whether a set of three numbers <br> can either make a scalene,Equilateral and or Isosceles triangle.</p>
+
+        <h2>DEFINITION OF A TRIANGLE</h2>
+            <h4> <strong>EQUILATERAL:</strong> <p> A triangle that has all sides equal</p></h4>
+            <h4> <strong>ISCOCELESS:</strong> <p>a triangle in which two sides have the same length</p></h4>
+              <h4> <strong>SCALENE:</strong> <p>A scalene triangle is a triangle that<br> has three unequal sides</p></h4>
+
+
     <div id="Form">
           <form class="mk1">
             Enter the triangle values below: <br>
