--- a/index.html
+++ b/index.html
@@ -9,29 +9,27 @@
 
 
     <div class="tex">
-      <h1>Triangle Tracker</h1>
-      <p id="mk3">This is an application that determines whether a set of three numbers <br> can either make a scalene,Equilateral and or Isosceles triangle.</p>
-
-        <h2>DEFINITION OF A TRIANGLE</h2>
-            <h4> <strong>EQUILATERAL:</strong> <p> A triangle that has all sides equal</p></h4>
-            <h4> <strong>ISCOCELESS:</strong> <p>a triangle in which two sides have the same length</p></h4>
-              <h4> <strong>SCALENE:</strong> <p>A scalene triangle is a triangle that<br> has three unequal sides</p></h4>
-
+        <h1>Triangle Tracker</h1>
+        <p id="mk3">This is an application that determines whether a set of three numbers <br> can either make a scalene,Equilateral and or Isosceles triangle.</p>
+          <h2>DEFINITION OF A TRIANGLE</h2>
+          <h4> <strong>EQUILATERAL:</strong> <p> A triangle that has all sides equal</p></h4>
+          <h4> <strong>ISCOCELESS:</strong> <p>a triangle in which two sides have the same length</p></h4>
+          <h4> <strong>SCALENE:</strong> <p>A scalene triangle is a triangle that<br> has three unequal sides</p></h4>
+    </div>
 
     <div id="Form">
-          <form class="mk1">
-            Enter the triangle values below: <br>
-            <p>
-              <h4>Side 1: </h4><BR>
-                <input type="Integer" NAME="input1" id="Triangle_Input1">
-                <h4>Side 2: </h4><BR>
-                  <input type="Integer" NAME="input2"  id="Triangle_Input2">
-                  <h4>Side 3:</h4> <BR>
-                    <input type="Integer" NAME="input3" id="Triangle_Input3">
-                    <input type="button" name="submitbutton" value="submit" onclick="fidel()">
-                  </form>
-                </div>
+        <form class="mk1">
+              Enter the triangle values below: <br>
+            <h4>Side 1: </h4><BR>
+            <input type="Integer" NAME="input1" id="Triangle_Input1">
+            <h4>Side 2: </h4><BR>
+            <input type="Integer" NAME="input2"  id="Triangle_Input2">
+            <h4>Side 3:</h4> <BR>
+            <input type="Integer" NAME="input3" id="Triangle_Input3">
+            <input type="button" name="submitbutton" value="submit" onclick="fidel()">
+        </form>
+    </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
